--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,20 @@
 {
     "rewrites": [
         {
-        "source": "/:path*",
-        "destination": "/:path*.html"
+            "source": "/index",
+            "destination": "/index.html"
+        },
+        {
+            "source": "/case-1",
+            "destination": "/case-1.html"
+        },
+        {
+            "source": "/case-2",
+            "destination": "/case-2.html"
+        },
+        {
+            "source": "/case-3",
+            "destination": "/case-3.html"
         }
     ]
 }
