--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.7",
+    "@next/third-parties": "^14.2.7",
     "@types/mdx": "^2.0.13",
     "next": "^14.2.7",
     "react": "^18.3.1",
