--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/mdx": "^14.2.7",
     "@next/third-parties": "^14.2.7",
     "@types/mdx": "^2.0.13",
+    "framer-motion": "^11.5.4",
     "next": "^14.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
